--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.dataservicios.ttauditalicorpcp"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+        versionCode 7
+        versionName "1.0.6"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -33,11 +33,17 @@ dependencies {
     implementation 'com.android.support:design:27.+'
     implementation 'com.j256.ormlite:ormlite-android:4.48'
     implementation 'com.j256.ormlite:ormlite-core:4.48'
-    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.zoonref:simple-view-behavior:1.0'
     implementation 'com.android.support:recyclerview-v7:27.+'
     implementation 'com.android.support:cardview-v7:27.+'
     implementation 'io.github.yavski:fab-speed-dial:1.0.6'
     implementation 'com.google.android.gms:play-services-maps:10.2.4'
+
+    implementation 'io.fotoapparat:fotoapparat:2.4.0'
+    implementation 'com.amitshekhar.android:android-networking:1.0.2'
+
+    implementation 'id.zelory:compressor:2.1.0'
+
 }
